# Lab2

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/lab1/: MainActivity.java  PinpadActivity.java
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml  content_pinpad.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
